crates/swc_ecma_parser/tests/test262-error-references/fail/b23c154206fb45fa.module.js.stderr
error: Unexpected token `,`. Expected identifier or string
 --> $DIR/tests/test262-parser/fail/b23c154206fb45fa.module.js:1:11
  |
1 | export {a,,b}
  |           ^

